--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,7 @@ jobs:
       - name: clone code
         uses: actions/checkout@v2
       - name: build
-        run: docker build -t ${{ secrets.DOCKER_NAME }}/hw26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+        run: docker build -t ${{ secrets.DOCKER_NAME }}/hw26:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
       - name: login
         run: docker login -u ${{ secrets.DOCKER_NAME }} -p ${{ secrets.DOCKER_TOKEN }}
       - name: push
