--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,8 +1,7 @@
 version: '3.9'
 services:
   flask_web:
-    build:
-      context: .
+    image: yakovkirilldeveloper/hw26: $GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - 80:80
     restart: always
