--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -14,6 +14,7 @@ jobs:
         run: docker push ${{ secrets.DOCKER_NAME }}/hw26:$GITHUB_REF_NAME-$GITHUB_RUN_ID
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: clone code
         uses: actions/checkout@v2
