--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,6 +31,15 @@ jobs:
           source: "deploy/docker-compose.yaml"
           target: "flask_api_ci"
           strip_components: 1
+      - name: deploy app
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          script: |
+            cd flack_app_ci
+            echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
 
 
 
